# ML-Notebook-Template

./: Dockerfile  Makefile  README.md  pyproject.toml
experiment/notebooks/: example.ipynb
