[tool.poetry]
name = "ml-notebook-template-public-template"
version = "0.1.0"
description = ""
authors = ["wuharlem"]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
pandas = "^1.4.3"
numpy = "^1.23.2"
scikit-learn = "^1.1.2"
scipy = "^1.9.0"
seaborn = "^0.11.2"
matplotlib = "^3.5.3"
tqdm = "^4.64.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
